--- a/portfolio.html
+++ b/portfolio.html
@@ -31,9 +31,18 @@
                 </ul>
             </nav>
             <ul class="contact-list list">
-                <li class="item"><a href="mailto:info@devstudio.com" class="header-contact link mail">info@devstudio.com</a>
+                <li class="item"><a href="mailto:info@devstudio.com" class="header-contact link">
+                        <svg width="16" height="12" class="contact-icon">
+                            <use href="./images/icons.svg#icon-mail"></use>
+                        </svg>
+                        info@devstudio.com</a></li>
+                <li class="item">
+                    <a href="tel:+380961111111" class="header-contact link">
+                        <svg width="16" height="12" class="contact-icon">
+                            <use href="./images/icons.svg#icon-smartphone"></use>
+                        </svg>
+                        +38 096 111 11 11</a>
                 </li>
-                <li class="item"><a href="tel:+380961111111" class="header-contact link tel">+38 096 111 11 11</a></li>
             </ul>
         </div>
     </header>
