--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     <h2 class="heading">Наша команда</h2>
                         <ul class="list team-list">
                             <li class="team-item">
-                                <img src="./images/photo_1.jpg" alt="Ігор Дем'яненко" width="260" class="name-img" >
+                                <img src="./images/photo_1.jpg" alt="Ігор Дем'яненко" width="270" class="name-img" >
                                 <div class="content">
                                 <h3 class="name">Ігор Дем'яненко</h3>
                                 <p class="desc">Product Designer</p>
@@ -143,7 +143,7 @@
                                 </div>
                             </li>
                             <li class="team-item">
-                                <img src="./images/photo_2.jpg" alt="Ольга Рєпіна" width="260"  class="name-img">
+                                <img src="./images/photo_2.jpg" alt="Ольга Рєпіна" width="270"  class="name-img">
                                 <div class="content">
                                 <h3 class="name">Ольга Рєпіна</h3>
                                 <p class="desc">Frontend Developer</p>
@@ -172,7 +172,7 @@
                                 </div>
                             </li>
                             <li class="team-item">
-                                <img src="./images/photo_3.jpg" alt="Микола Тарасов" width="260"  class="name-img">
+                                <img src="./images/photo_3.jpg" alt="Микола Тарасов" width="270"  class="name-img">
                                 <div class="content">
                                 <h3 class="name">Микола Тарасов</h3>
                                 <p class="desc">Marketing</p>
@@ -202,7 +202,7 @@
                             </li>
             
                             <li class="team-item">
-                                <img src="./images/photo_4.jpg" alt="Михайло Єрмаков" width="260"  class="name-img">
+                                <img src="./images/photo_4.jpg" alt="Михайло Єрмаков" width="270"  class="name-img">
                                 <div class="content">
                                 <h3 class="name">Михайло Єрмаков</h3>
                                 <p class="desc">UI Designer</p>
@@ -312,22 +312,22 @@
                 <div class="soc-networks">
                     <h2 class="footer-title">приєднуйтесь</h2>
                     <ul class="footer-soc-list list">
-                        <li class="footer-soc-item"><a href="" class="footer-soc-link link">
+                        <li class="footer-soc-item"><a href="#" class="footer-soc-link link">
                                 <svg width="20" height="20" class="footer-soc-icons">
                                     <use href="./images/icons.svg#icon-instagram"></use>
                                 </svg>
                             </a></li>
-                        <li class="footer-soc-item"><a href="" class="footer-soc-link link">
+                        <li class="footer-soc-item"><a href="#" class="footer-soc-link link">
                                 <svg width="20" height="20" class="footer-soc-icons">
                                     <use href="./images/icons.svg#icon-twitter"></use>
                                 </svg>
                             </a></li>
-                        <li class="footer-soc-item"><a href="" class="footer-soc-link link">
+                        <li class="footer-soc-item"><a href="#" class="footer-soc-link link">
                                 <svg width="20" height="20" class="footer-soc-icons">
                                     <use href="./images/icons.svg#icon-facebook"></use>
                                 </svg>
                             </a></li>
-                        <li class="footer-soc-item"><a href="" class="footer-soc-link link">
+                        <li class="footer-soc-item"><a href="#" class="footer-soc-link link">
                                 <svg width="20" height="20" class="footer-soc-icons">
                                     <use href="./images/icons.svg#icon-linkedin"></use>
                                 </svg>
